objects/TaskTemplate__c.object
<CustomObject>
    <description>A template object for creating tasks</description>
    <fields>
        <fullName>CommunityPageURL__c</fullName>
        <description>This is the URL of the page within the community that a user would be directed to upon opening the case item</description>
        <inlineHelpText>This is the URL of the page within the community that a user would be directed to upon opening the case item</inlineHelpText>
        <label>Community Page URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaysUntilDueDate__c</fullName>
        <description>The number of days until the task is due.</description>
        <label>Days Until Due Date</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The details about the task. These details will be copied to the Description (Comments) field of the Task.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskStatus__c</fullName>
        <description>This field will drive the Status field of the new Task that is created.</description>
        <inlineHelpText>This field will drive the Status field of the new Task that is created.</inlineHelpText>
        <label>Task Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of the task to be created using the template.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Item_Type</valueSetName>
        </valueSet>
    </fields>
    <label>Task Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>